<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/detailsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/detailsIdTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/id"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/detailsPokemonTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pokemon"
            android:textSize="48sp" />

        <LinearLayout
            android:id="@+id/detailsTypeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detailsType1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:gravity="end"
                android:text="@string/type1"
                tools:textSize="28sp" />

            <TextView
                android:id="@+id/detailsSlashTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/slash"
                tools:textSize="24sp" />

            <TextView
                android:id="@+id/detailsType2TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:gravity="start"
                android:text="@string/type2"
                tools:textSize="28sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/detailsImageUrlTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/imageUrl" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>